# jsonlogic

./: .gitignore  README.md  main.py  pyproject.toml
jsonlogic/: __init__.py  json.py  jsonlogic.py  jsonpath.py  operators.py
tests/: conftest.py  test_json_constructors.py
